.kube/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
        name: website
  template:
    metadata:
      labels:
        name: website
    spec:
      containers:
      - name: website
        image: onuralp/website:5
        ports:
        - containerPort: 4000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "150m"
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 4000
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          httpGet:
            path: /
            port: 4000
            scheme: HTTP
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  selector:
    name: website
  ports:
  - port: 8080
    targetPort: 4000
    name: http
  - port: 443
    targetPort: 4000
    name: https
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: website
          servicePort: 8080
